# 42-printf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile-main  Makefile.bak  README.md  arg_globals.c  flags_checking.c  ft_printf.c  ft_printf.h  main-bak.c  man_3_printf.txt  r  result  test
includes/: ft_printf.h  libft.h  parsing.h  print_test.h  printing.h  utils.h
libftprintf/: Makefile
libftprintf/includes/: libft.h
libftprintf/srcs/lists/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libftprintf/srcs/math/: ft_abs.c  ft_absd.c  ft_absf.c  ft_absl.c  ft_absld.c  ft_max.c  ft_min.c  ft_pow.c  ft_round.c  ft_sqrt.c
libftprintf/srcs/memory/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_realloc.c
libftprintf/srcs/string/: ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbrf.c  ft_putnstr.c  ft_putstr.c  ft_putstr_fd.c  ft_putstr_padzeroes.c  ft_strcat.c  ft_strcdel.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strcrepl.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strisalnum.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  (+18 more)
srcs/: CMakeLists.txt  format_list.c  format_list.h  format_parsing.c  format_parsing.h  ft_printf.c  ft_printf.h  main.c
srcs/parsing/: CMakeLists.txt  flags.c  format_parsing.c  format_parsing.h  length.c  parsing.c  precision.c  specifiers.c  width.c
srcs/printing/: CMakeLists.txt  arg_print.c  arg_print.h  buffering.c  bytes_written.c  cast.c  chars.c  numbers.c  nums_base.c  nums_common.c  nums_common_floats.c  nums_floats.c  nums_floats_common.c  nums_floats_shorter.c  nums_integers.c  nums_signed.c  nums_unsigned.c  percent.c  pointers.c  printing.c  strings.c  strings_unicode.c
srcs/test/: print_test.c  print_test.h
srcs/utilities/: abs_t_unsigned.c  get_nb_len.c  itoa.c  padd_value.c  print_itoa_base.c  utils.c  utils.h  utils_common.c  utils_floats.c  utils_floats_scient.c
test/: Makefile
